--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,26 +1,107 @@
-version: "2"
+linters-settings:
+  govet:
+    # in addition to default (see golangci docs for list of defaults)
+    enable:
+      - shadow
+  gocyclo:
+    min-complexity: 25
+  dupl:
+    threshold: 100
+  goconst:
+    min-len: 2
+    min-occurrences: 2
+  misspell:
+    locale: US
+  gocritic:
+    enabled-tags:
+      - performance
+      - style
+      - experimental
+    disabled-checks:
+      - wrapperFunc
+      - hugeParam
+      - rangeValCopy
+  lll:
+    line-length: 140
+  errcheck:
+    check-type-assertions: true
+    check-blank: true
+
 linters:
-  default: all
-  exclusions:
-    generated: lax
-    presets:
-      - comments
-      - common-false-positives
-      - legacy
-      - std-error-handling
-    paths:
-      - third_party$
-      - builtin$
-      - examples$
-formatters:
+  disable-all: true
   enable:
-    - gci
-    - gofmt
-    - gofumpt
-    - goimports
-  exclusions:
-    generated: lax
-    paths:
-      - third_party$
-      - builtin$
-      - examples$
+    - staticcheck
+    - govet
+    - unconvert
+    - gosec
+    - gocyclo
+    - dupl
+    - misspell
+    - unparam
+#    - typecheck
+    - ineffassign
+#    - stylecheck
+    - gochecknoinits
+    - gocritic
+#    - revive
+    - nakedret
+#    - gosimple
+    - prealloc
+    - unused
+    - dogsled
+    - gocognit
+#    - gofumpt
+    - noctx
+    - testpackage
+    - lll
+    - errcheck
+  fast: false
+
+run:
+  modules-download-mode: readonly
+  concurrency: 4
+
+issues:
+  exclude-dirs:
+    - vendor
+    - .go
+    - internal/gen
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - dupl
+        - lll
+        - errcheck
+    - path: tests/
+      linters:
+        - dupl
+        - lll
+        - errcheck
+    - text: "comment on exported method"
+      linters:
+        - revive
+    - text: "should have a package comment"
+      linters:
+        - revive
+    - text: "should have comment or be unexported"
+      linters:
+        - revive
+    - text: "comment on exported var"
+      linters:
+        - revive
+    - text: "should have comment"
+      linters:
+        - revive
+    - text: "at least one file in a package should have a package comment"
+      linters:
+        - stylecheck
+    - text: "shadow: declaration of \"err\" shadows declaration"
+      linters:
+        - govet
+    - linters:
+        - lll
+      source: ".*// nolint"
+
+  exclude-use-default: false
+
+version: '2'
