--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ EMAIL_FROM=
 EMAIL_FROM_NAME=
 
 OPENWEATHERMAP_API_KEY=
+
+GEOCODING_API_URL=https://api.openweathermap.org/geo/1.0/direct
+WEATHER_API_URL=https://api.openweathermap.org/data/2.5/weather
