refactor: decouple notification and geocoding dependencies

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ DB_PASSWORD=postgres
 DB_NAME=weather
 
 SENDGRID_API_KEY=
-EMAIL_FROM=
-EMAIL_FROM_NAME=
+SENDER_EMAIL=
+SENDER_NAME=
 
 OPENWEATHERMAP_API_KEY=
 
