ci: update workflows to use Alpine and Go 1.24

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -13,12 +13,12 @@ permissions:
 jobs:
   golangci:
     name: lint
-    runs-on: ubuntu-latest
+    runs-on: alpine-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.23.9
+          go-version: 1.24
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
