--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -13,33 +13,30 @@ permissions:
 
 jobs:
   unit:
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
+    container:
+      image: golang:1.24-alpine
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24
       - name: Run unit tests
         run: go test -v -short ./...
 
   integration:
     runs-on: ubuntu-latest
+    container:
+      image: golang:1.24-alpine
     needs: unit
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24
       - name: Run integration tests
         run: go test -v -tags=integration ./...
 
   e2e:
     runs-on: ubuntu-latest
+    container:
+      image: golang:1.24-alpine
     needs: integration
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24
       - name: Run E2E tests
         run: go test -v -tags=e2e ./...
