--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -13,12 +13,11 @@ permissions:
 jobs:
   golangci:
     name: lint
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
+    container:
+      image: golang:1.24-alpine
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
