--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run integration tests
-        run: go test -v -tags=integration ./...
+        run: go test -v -tags=integration ./tests/integration/...
 
   e2e:
     runs-on: ubuntu-latest
