--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ DB_PASSWORD=postgres
 DB_NAME=weather
 
 SENDGRID_API_KEY=
-EMAIL_FROM=
-EMAIL_FROM_NAME=
+SENDER_EMAIL=
+SENDER_NAME=
 
 OPENWEATHERMAP_API_KEY=
+
+GEOCODING_API_URL=https://api.openweathermap.org/geo/1.0/direct
+WEATHER_API_URL=https://api.openweathermap.org/data/2.5/weather
