--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ OPENWEATHERMAP_API_KEY=
 
 GEOCODING_API_URL=https://api.openweathermap.org/geo/1.0/direct
 WEATHER_API_URL=https://api.openweathermap.org/data/2.5/weather
+
+WEATHER_API_KEY=
+WEATHER_API_URL=http://api.weatherapi.com/v1/current.json
