HW#5 (GoF Patterns) (#12)
New Features
- Added support for an additional weather data provider, enabling the app to fetch weather information from multiple sources for improved reliability.
- Implemented a fallback mechanism to automatically switch to an alternative weather provider if the primary source fails.

Chores
- Updated environment variable configuration to support both weather providers.
- Enhanced configuration validation for new provider settings.

Tests
- Introduced comprehensive unit tests for the new weather provider integration and the provider fallback logic.

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ SENDER_EMAIL=
 SENDER_NAME=
 
 OPENWEATHERMAP_API_KEY=
-
 GEOCODING_API_URL=https://api.openweathermap.org/geo/1.0/direct
-WEATHER_API_URL=https://api.openweathermap.org/data/2.5/weather
+OPENWEATHERMAP_API_URL=https://api.openweathermap.org/data/2.5/weather
+
+WEATHER_API_KEY=
+WEATHER_API_URL=http://api.weatherapi.com/v1/current.json
