--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   db:
     image: postgres:latest
@@ -35,6 +37,20 @@ services:
       start_period: 30s
       timeout: 10s
 
+  redis:
+    image: redis:7-alpine
+    container_name: weather-redis
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    volumes:
+      - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+
   # migrate:
   #   image: migrate/migrate
   #   depends_on:
@@ -46,3 +62,4 @@ services:
 
 volumes:
   pgdata:
+  redisdata:
