--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,30 @@
+# Server Configuration
 PORT=8080
+GRACEFUL_SHUTDOWN_TIMEOUT=30s
 
+# Database Configuration
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=weather
 
+# SendGrid Configuration
 SENDGRID_API_KEY=
 SENDER_EMAIL=
 SENDER_NAME=
 
+# OpenWeather Configuration
 OPENWEATHERMAP_API_KEY=
 GEOCODING_API_URL=https://api.openweathermap.org/geo/1.0/direct
 OPENWEATHERMAP_API_URL=https://api.openweathermap.org/data/2.5/weather
 
+# WeatherAPI Configuration
 WEATHER_API_KEY=
 WEATHER_API_URL=http://api.weatherapi.com/v1/current.json
+# Redis Configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_CACHE_TTL=10m 
