--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,28 @@ OPENWEATHERMAP_API_URL=https://api.openweathermap.org/data/2.5/weather
 # WeatherAPI Configuration
 WEATHER_API_KEY=
 WEATHER_API_URL=http://api.weatherapi.com/v1/current.json
+
 # Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
 REDIS_CACHE_TTL=10m 
+
+# Monitoring Configuration
+REDIS_EXPORTER_PORT=9121
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+GRAFANA_ADMIN_PASSWORD=admin
+
+# Prometheus Configuration
+PROMETHEUS_RETENTION_TIME=200h
+
+# Health Check Configuration
+HEALTH_CHECK_INTERVAL=10s
+HEALTH_CHECK_RETRIES=5
+HEALTH_CHECK_START_PERIOD=30s
+HEALTH_CHECK_TIMEOUT=10s
+
+# Container Configuration
+CONTAINER_RESTART_POLICY=unless-stopped
