Add Kafka integration and event publishing capabilities
Features
- Introduced Kafka configuration in the application, allowing for event-driven communication.
- Added Kafka services in the Docker Compose setup, including Zookeeper and Kafka UI for management.
- Implemented event publishing for weather updates and subscription events, enhancing the application's responsiveness to changes.

Refactor
- Updated the application structure to include event handling and publishing mechanisms, ensuring that relevant events are published upon state changes.
- Enhanced the notification and subscription services to publish events when actions are performed.

Documentation
- Updated the .env.example file to include Kafka broker configuration.
- Added new event types and handlers to support the event-driven architecture.

Tests
- Added unit tests for new event types and integration tests for Kafka publishing and consumption.

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ HEALTH_CHECK_TIMEOUT=10s
 
 # Container Configuration
 CONTAINER_RESTART_POLICY=unless-stopped
+
+# Kafka Configuration
+KAFKA_BROKERS=localhost:29092
