Update Docker Compose configurations for notification and subscription services to use .env file for environment variables
Changes:
- Replaced individual environment variable definitions with a reference to a .env file in both notification-service and subscription-service Docker Compose files. This simplifies configuration management and enhances maintainability.

--- a/internal/services/notification-service/docker-compose.yaml
+++ b/internal/services/notification-service/docker-compose.yaml
@@ -2,12 +2,8 @@ version: '3.8'
 services:
   notification-service:
     build: .
-    environment:
-      - PORT=${PORT}
-      - KAFKA_BROKERS=${KAFKA_BROKERS}
-      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
-      - SENDER_EMAIL=${SENDER_EMAIL}
-      - SENDER_NAME=${SENDER_NAME}
+    env_file:
+      - .env
     ports:
       - "${PORT}:${PORT}"
     networks:
