--- a/internal/services/subscription-service/docker-compose.yaml
+++ b/internal/services/subscription-service/docker-compose.yaml
@@ -23,14 +23,8 @@ services:
   subscription-service:
     build: .
     container_name: subscription-service
-    environment:
-      - PORT=${PORT}
-      - KAFKA_BROKERS=${KAFKA_BROKERS}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
