Add API Gateway service with Docker support and configuration management
Features:
- Introduced an API Gateway that routes requests to weather and subscription services.
- Implemented configuration management using environment variables for server and Kafka settings.

Infrastructure:
- Created Dockerfile and Docker Compose configuration for the API Gateway, enabling easy deployment and environment setup.
- Added .env.example file for environment variable management.

Code Structure:
- Organized code into distinct packages for configuration, routing, and handlers, enhancing maintainability and clarity.

--- a/internal/services/weather-service/docker-compose.yaml
+++ b/internal/services/weather-service/docker-compose.yaml
@@ -6,9 +6,18 @@ services:
       - .env
     ports:
       - "${PORT}:${PORT}"
+    networks:
+      - weather-net
 
   redis:
     image: redis:7.2-alpine
     ports:
       - "6379:6379"
+    networks:
+      - weather-net
 
+
+networks:
+  weather-net:
+    external: true
+    name: software-engineering-school-5-0-kenobichek_default 
