Remove deprecated services and configurations; introduce Kafka-based architecture
Changes:
- Deleted the existing Docker Compose files, Dockerfile, and Go modules related to the weather and notification services, streamlining the project structure.
- Added a new Docker Compose configuration for Kafka and Zookeeper, facilitating event-driven communication.
- Updated the API Gateway to route requests to the new services and adjusted environment variables accordingly.
- Introduced a new script to start all services in detached mode, enhancing deployment efficiency.

This commit prepares the codebase for a more modular and scalable architecture, leveraging Kafka for event handling.

--- a/internal/services/subscription-service/.env.example
+++ b/internal/services/subscription-service/.env.example
@@ -1,5 +1,5 @@
 # Server Configuration
-PORT=8080
+PORT=8083
 GRACEFUL_SHUTDOWN_TIMEOUT=30s
 
 # Database Configuration
@@ -49,4 +49,4 @@ HEALTH_CHECK_TIMEOUT=10s
 CONTAINER_RESTART_POLICY=unless-stopped
 
 # Kafka Configuration
-KAFKA_BROKERS=localhost:29092
+KAFKA_BROKERS=kafka:9092
