--- a/internal/services/subscription-service/docker-compose.yaml
+++ b/internal/services/subscription-service/docker-compose.yaml
@@ -21,7 +21,9 @@ services:
       - weather-net
 
   subscription-service:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile.dev
     container_name: subscription-service
     env_file:
       - .env
@@ -31,6 +33,8 @@ services:
     ports:
       - "${PORT}:${PORT}"
     restart: unless-stopped
+    volumes:
+      - ./:/app
     networks:
       - weather-net
 
