Add notification service implementation with event handling and Docker support
Changes:
- Introduced a new notification service with handlers for weather updates and subscription events.
- Implemented a SendGrid notifier for sending emails based on Kafka events.
- Added Dockerfile and .air.toml for development support with live reloading.
- Updated Docker Compose configuration to include the new service and its dependencies.

This commit enhances the notification service's functionality and improves the development workflow with better integration and event handling.

--- a/internal/services/subscription-service/.air.toml
+++ b/internal/services/subscription-service/.air.toml
@@ -2,9 +2,9 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o subscription-service ./cmd/subscription-service"
-bin = "subscription-service"
-run = "./subscription-service"
+cmd = "go build -o tmp/subscription-service ./cmd/subscription-service"
+bin = "tmp/subscription-service"
+run = "./tmp/subscription-service"
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor"]
 delay = 1000
