--- a/internal/services/notification-service/.air.toml
+++ b/internal/services/notification-service/.air.toml
@@ -2,9 +2,9 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o tmp/api-gateway ./cmd/api-gateway"
-bin = "tmp/api-gateway"
-run = "./tmp/api-gateway"
+cmd = "go build -o tmp/notification-service ./cmd/notification-service"
+bin = "tmp/notification-service"
+run = "./tmp/notification-service"
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor"]
 delay = 1000
