--- a/internal/services/notification-service/docker-compose.yaml
+++ b/internal/services/notification-service/docker-compose.yaml
@@ -1,11 +1,15 @@
 version: '3.8'
 services:
   notification-service:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
       - "${PORT}:${PORT}"
+    volumes:
+      - ./:/app
     networks:
       - weather-net
 
