--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -11,11 +11,16 @@ jobs:
   golangci:
     name: lint
     runs-on: ubuntu-latest
-    container:
-      image: golang:1.24-alpine
+    strategy:
+      matrix:
+        service:
+          - api-gateway
+          - notification-service
+          - subscription-service
+          - weather-service
     steps:
       - uses: actions/checkout@v4
-      - name: golangci-lint
+      - name: Run golangci-lint on ${{ matrix.service }}
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.1
+          working-directory: internal/services/${{ matrix.service }}
