--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -9,31 +9,22 @@ permissions:
   contents: read
 
 jobs:
-  unit:
+  test:
+    name: Run tests for ${{ matrix.service }}
     runs-on: ubuntu-latest
-    container:
-      image: golang:1.24-alpine
+    strategy:
+      matrix:
+        service:
+          - api-gateway
+          - notification-service
+          - subscription-service
+          - weather-service
     steps:
       - uses: actions/checkout@v4
-      - name: Run unit tests
-        run: go test -v -short ./...
-
-  integration:
-    runs-on: ubuntu-latest
-    container:
-      image: golang:1.24-alpine
-    needs: unit
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run integration tests
-        run: go test -v -tags=integration ./tests/integration/...
-
-  e2e:
-    runs-on: ubuntu-latest
-    container:
-      image: golang:1.24-alpine
-    needs: integration
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run E2E tests
-        run: go test -v -tags=e2e ./...
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+      - name: Run tests
+        working-directory: internal/services/${{ matrix.service }}
+        run: go test -v ./...
