--- a/internal/services/notification-service/Dockerfile
+++ b/internal/services/notification-service/Dockerfile
@@ -1,6 +1,5 @@
-# syntax=docker/dockerfile:1
+FROM golang:1.23.0
 
-FROM golang:1.23-alpine AS builder
 WORKDIR /app
 
 COPY go.mod go.sum ./
@@ -8,19 +7,6 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o notification-service ./cmd/notification-service
+RUN go build -o notification-service ./cmd/notification-service/main.go
 
-FROM alpine:3.19
-WORKDIR /app
-
-COPY --from=builder /app/notification-service /app/notification-service
-COPY --from=builder /app/config /app/config
-COPY --from=builder /app/domain /app/domain
-COPY --from=builder /app/infrastructure /app/infrastructure
-COPY --from=builder /app/notifier /app/notifier
-
-EXPOSE ${PORT}
-
-ENV PORT=${PORT}
-
-ENTRYPOINT ["/app/notification-service"]
+CMD ["go","run","./cmd/notification-service/main.go"]
