add kafka topic config, validation, error handling and proto package update

--- a/internal/services/subscription-service/.env.example
+++ b/internal/services/subscription-service/.env.example
@@ -50,3 +50,5 @@ CONTAINER_RESTART_POLICY=unless-stopped
 
 # Kafka Configuration
 KAFKA_BROKERS=kafka:9092
+KAFKA_COMMAND_TOPIC=commands.subscription
+KAFKA_EVENT_TOPIC=events.subscription
