--- a/internal/services/subscription-service/docker-compose.yaml
+++ b/internal/services/subscription-service/docker-compose.yaml
@@ -28,7 +28,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "${PORT}:${PORT}"
     restart: unless-stopped
