--- a/internal/services/subscription-service/grafana-provisioning/datasources/victoria.yaml
+++ b/internal/services/subscription-service/grafana-provisioning/datasources/victoria.yaml
@@ -1,7 +1,8 @@
 apiVersion: 1
 
 datasources:
-  - name: VictoriaMetrics
+  - uid: VictoriaMetrics
+    name: VictoriaMetrics
     type: prometheus
     access: proxy
     url: http://victoria-metrics:8428
