--- a/internal/services/subscription-service/docker-compose.yaml
+++ b/internal/services/subscription-service/docker-compose.yaml
@@ -55,7 +55,7 @@ services:
           - victoria-metrics
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:${VICTORIA_METRICS_PORT:-8428}/health"]
+      test: ["CMD", "wget", "-qO-", "http://localhost:8428/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -73,7 +73,13 @@ services:
     ports:
       - "${GRAFANA_PORT}:3000"
     depends_on:
-      - victoria-metrics
+      victoria-metrics:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     networks:
       - weather-net
 
