--- a/internal/services/subscription-service/docker-compose.yaml
+++ b/internal/services/subscription-service/docker-compose.yaml
@@ -32,9 +32,54 @@ services:
         condition: service_healthy
     ports:
       - "${PORT}:${PORT}"
+
     restart: unless-stopped
     volumes:
       - ./:/app
+    networks:
+      - weather-net
+
+  victoria-metrics:
+    image: victoriametrics/victoria-metrics:v1.96.0
+    container_name: victoria-metrics
+    command:
+      - '--promscrape.config=/etc/prometheus/prometheus.yml'
+      - '--promscrape.config.strictParse=false'
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "${VICTORIA_METRICS_PORT:-8428}:8428"
+    networks: 
+      weather-net:
+        aliases:
+          - victoria-metrics
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:8428/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  grafana:
+    image: grafana/grafana:10.4.2
+    container_name: grafana
+    volumes:
+      - ./grafana-provisioning:/etc/grafana/provisioning
+      - ./grafana-provisioning/dashboards:/var/lib/grafana/dashboards:ro
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+    ports:
+      - "${GRAFANA_PORT}:3000"
+    depends_on:
+      victoria-metrics:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     networks:
       - weather-net
 
